# tracecraft

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_SETUP.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  mlflow.db  pyproject.toml  release-please-config.json
.claude/: settings.json
.claude/commands/: check.md  docs.md  review.md  setup.md  test.md
.claude/rules/: architecture.md  commits.md  documentation.md  python-standards.md  testing.md
.claude/skills/add-adapter/: SKILL.md
.claude/skills/add-exporter/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  release-please.yml  release.yml  scorecard.yml  trigger-docs-deploy.yml
apps/docs/components/: Cards.tsx  ChatPage.tsx  Details.tsx  DocsChat.tsx  index.ts
apps/docs/pages/: _app.tsx  _meta.ts  contributing.mdx  faq.mdx  getting-help.mdx  glossary.mdx  index.mdx  troubleshooting.mdx
apps/docs/scripts/: sync_from_mkdocs.py
apps/docs/tests/: sync_from_mkdocs.test.ts
dev/: DOCUMENTATION_SITE_PLAN.md  api-reference.md
dev/architecture/: PAIN_POINTS.md
dev/research/: OpenAI-research2.md  openai-research-focused.md
docs/: .gitignore  DESIGN_REVIEW.md  DOCUMENTATION_SITE_PLAN.md  FEATURE_EVALUATION.md  GEMINI-RESEARCH.md  OpenAI-research1.md  PAIN_POINTS.md  changelog.md  combined-research.md  contributing.md  faq.md  gemini-focused.md  getting-help.md  glossary.md  index.md  llm-agent-observability-market-validation.md  openai-research-focused.md  troubleshooting.md
docs/api/: core.md  index.md
docs/deployment/: aws-agentcore.md  azure-foundry.md  gcp-vertex-agent.md  high-throughput.md  high_throughput.md  index.md  kubernetes.md  production.md
docs/getting-started/: concepts.md  index.md  installation.md  quickstart.md
docs/integrations/: auto-instrumentation.md  claude-sdk.md  cloud-platforms.md  index.md  langchain.md  llamaindex.md  otel-receiver.md  pydantic-ai.md
docs/migration/: from-langfuse.md  from-langsmith.md  from-openllmetry.md  from_langfuse.md  from_langsmith.md  from_openllmetry.md  index.md
docs/overrides/: main.html
docs/reference/: quick-reference.md
docs/stylesheets/: chat.css  extra.css
docs/user-guide/: configuration.md  decorators.md  exporters.md  index.md  multi-tenancy.md  performance.md  processors.md  remote-trace-sources.md  security.md  tui.md
examples/: README.md  requirements.txt  run_example.py
examples/.agenttrace/: config.minimal.yaml  config.yaml
examples/.tracecraft/: config.minimal.yaml  config.yaml
examples/01-getting-started/: 01_hello_world.py  02_decorators.py  03_context_managers.py  04_configuration.py  README.md
examples/02-frameworks/: README.md
examples/02-frameworks/claude_sdk/: 01_basic_tracing.py  02_custom_hooks.py  03_production_config.py  README.md
examples/02-frameworks/langchain/: 01_simple_chain.py  02_tools_and_agents.py  03_rag_pipeline.py  04_streaming.py  README.md
examples/02-frameworks/langgraph/: 01_simple_graph.py  02_multi_node_graph.py  03_react_agent.py  README.md
examples/02-frameworks/llamaindex/: 01_basic_query.py  02_rag_with_retrieval.py  03_agents.py  README.md
examples/02-frameworks/openai/: 01_direct_api.py  02_function_calling.py  03_streaming.py  README.md
examples/02-frameworks/pydantic_ai/: 01_basic_agent.py  02_tool_use.py  README.md
examples/03-exporters/: 01_console_jsonl.py  02_otlp_jaeger.py  03_otlp_tempo.py  04_html_reports.py  05_azure_foundry.py  06_aws_agentcore.py  07_gcp_vertex_agent.py  README.md
examples/04-production/: 04_multi_runtime.py  README.md
examples/04-production/configuration/: 01_production_config.py
examples/04-production/processors/: 01_processor_pipeline.py
examples/05-alerting/: README.md
examples/06-evaluation/: 01_basic_eval.py  02_from_traces.py  03_deepeval_metrics.py  04_ragas_rag.py  05_llm_judge.py  06_ci_integration.py  README.md
examples/06-receiver/: 01_receiver_demo.py  02_send_traces.py  03_otel_sdk_example.py  04_real_openai_traces.py  05_real_anthropic_traces.py  06_simple_setup.py  README.md
examples/07-distributed/: README.md
examples/08-real-world/: README.md
examples/09-advanced/: 05_multi_agent.py  06_async_context.py  README.md
includes/: abbreviations.md
scripts/: capture_tui_screenshots.py  validate_auto_instrumentation.py
src/agenttrace/: __init__.py
src/agenttrace/adapters/: __init__.py  (+5 more)
src/tracecraft/: __init__.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_full_pipeline.py
tests/integration/: __init__.py  test_claude_sdk.py  test_evaluation.py  test_langchain.py  test_llamaindex.py  test_pydantic_ai.py  test_receiver_frameworks.py  test_receiver_integration.py  test_tui_auto_instrumentation.py
tests/live/: __init__.py  conftest.py  test_live_auto_instrumentation.py  test_live_full_pipeline.py  test_live_langchain.py  test_live_llamaindex.py  test_live_openai.py  test_live_otlp.py  test_live_pydantic_ai.py
tests/unit/: __init__.py  test_alerting_quality.py  test_alerting_webhooks.py  test_async_helpers.py  test_async_pipeline.py  test_async_runtime.py  test_auto_instrumentation.py  test_aws_agentcore.py  test_azure_foundry.py  test_cli.py  test_cloud_providers.py  test_cloudtrace_propagation.py  test_config.py  test_context.py  test_dataset_converters.py  test_decorators.py  test_deepeval_integration.py  test_enrichment.py  test_env_config.py  test_environment_detection.py  test_eval_cli.py  test_eval_navigation.py  test_evaluation.py  test_evaluation_models.py  test_evaluation_runner.py  test_evaluation_storage.py  test_executors.py  test_exporters.py  test_gcp_vertex_agent.py  test_guardrails_adapter.py  test_html.py  test_init.py  test_langfuse_prompts.py  test_memory_tracking.py  test_mlflow_exporter.py  test_mlflow_integration.py  test_model_matching.py  test_models.py  test_otel_importer.py  test_otel_setup.py  (+31 more)
(+259 files in other folders)
